--- a/app/src/main/res/drawable/grad_bg.xml
+++ b/app/src/main/res/drawable/grad_bg.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient android:startColor="@android:color/holo_blue_light"
-        android:endColor="#303F9F"
+        android:endColor="#1069e1"
         android:angle="270"
         android:type="linear"/>
 </shape>
