--- a/app/src/main/res/layout/activity_food_list.xml
+++ b/app/src/main/res/layout/activity_food_list.xml
@@ -42,6 +42,10 @@
 
     </RelativeLayout>
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:id="@+id/pulltorefreshhome"
+        android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -69,6 +73,7 @@
         </android.support.v7.widget.RecyclerView>
 
     </RelativeLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 
