--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -112,8 +112,9 @@
             android:id="@+id/cvbill"
             android:layout_below="@+id/rlrestinfo"
             android:layout_height="wrap_content">
-        <android.support.constraint.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
+            android:orientation="vertical"
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true"
             android:padding="10dp"
@@ -170,6 +171,77 @@
                 android:id="@+id/recycler_bill"
                 android:layout_height="wrap_content">
             </android.support.v7.widget.RecyclerView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:id="@+id/llbillpromo"
+                android:visibility="gone"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_marginVertical="5dp"
+                    app:layout_constraintTop_toBottomOf="@+id/lldeliverycharge"
+                    android:background="@android:color/darker_gray"
+                    android:layout_height="1dp"
+                    android:orientation="horizontal" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:weightSum="4"
+                    android:id="@+id/llsubtotal"
+                    android:layout_height="wrap_content"
+
+                    app:layout_constraintTop_toBottomOf="@+id/recycler_bill"
+                    >
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:text="Subtotal"
+                        android:textColor="@android:color/black"
+                        android:textSize="15dp"
+                        />
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Rs. 40"
+                        android:id="@+id/txtsubtotal"
+                        android:textColor="@android:color/black"
+                        android:textAlignment="center"
+                        />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:weightSum="4"
+                    android:id="@+id/llpromocodebill"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/recycler_bill"
+                    >
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:text="Promo - "
+                        android:textColor="#1e90ff"
+                        android:textSize="15dp"
+                        android:id="@+id/txtbillpromoname"
+                        />
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Rs. 40"
+                        android:id="@+id/txtpromoamount"
+                        android:textColor="#1e90ff"
+                        android:textAlignment="center"
+                        />
+                </LinearLayout>
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:weightSum="4"
@@ -234,15 +306,86 @@
             </LinearLayout>
 
 
-        </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:id="@+id/cvpromocode"
+            android:elevation="4dp"
+            android:layout_marginTop="5dp"
+            android:layout_below="@+id/cvbill"
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:padding="10dp"
+
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Promo Code"
+                    android:textSize="17dp"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold"
+                    android:id="@+id/txtpromocode"
+                    />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:id="@+id/rlpc"
+                    android:descendantFocusability="beforeDescendants"
+                    android:focusableInTouchMode="true"
+                    android:layout_below="@+id/txtpromocode"
+                    >
+                    <ImageView
+                        android:layout_centerVertical="true"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:src="@drawable/ic_monetization_on_black_24dp"
+                        android:tint="#1e90ff"
+                        android:id="@+id/imgcc"
+                        />
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_toRightOf="@+id/imgcc"
+                        android:textSize="15dp"
+                        android:id="@+id/edtpromocode"
+                        android:shadowColor="@android:color/darker_gray"
+                        android:hint="Have a promo code? Enter it here"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="13dp"
+                        android:layout_centerVertical="true"
+                        android:text="APPLY"
+                        android:id="@+id/txtapplypromocode"
+                        android:textStyle="bold"
+                        android:layout_alignParentRight="true"
+                        android:textColor="@android:color/holo_green_dark"
+                        />
+                </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/rlpc"
+                    android:visibility="gone"
+                    android:text="Promo Code applied successfully !"
+                    android:textColor="@android:color/holo_green_dark"
+                    android:textStyle="bold"
+                    android:textSize="12dp"
+                    android:id="@+id/txtpcas"
+                    />
+            </RelativeLayout>
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:id="@+id/cvchoosetime"
             android:elevation="4dp"
-            android:visibility="gone"
             android:layout_marginTop="5dp"
-            android:layout_below="@+id/cvbill"
+            android:layout_below="@+id/cvpromocode"
             android:layout_height="wrap_content">
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -252,14 +395,14 @@
                 <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Order Receiving Time"
+                android:text="Delivery"
                 android:textSize="17dp"
                 android:textStyle="bold"
                 android:id="@+id/txtsetorderreceivetime"
                 app:layout_constraintTop_toTopOf="parent"
                 android:textColor="@android:color/black"
                 />
-                <TextView
+                <!--TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
@@ -275,7 +418,53 @@
                     android:src="@drawable/ic_edit_black_24dp"
                     android:paddingLeft="10dp"
                     android:tint="@android:color/holo_blue_dark"
+                    / -->
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_below="@+id/txtsetorderreceivetime"
+                    android:id="@+id/rl1"
+                    android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="15dp"
+                    android:layout_centerVertical="true"
+                    android:textColor="@android:color/black"
+                    android:text="ASAP : "
+                    android:id="@+id/txtasap"
                     />
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:checked="true"
+                    android:id="@+id/cbasap"
+                    android:layout_alignParentRight="true"
+                    />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_below="@+id/rl1"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="15dp"
+                        android:id="@+id/txtschedule"
+                        android:textColor="@android:color/black"
+                        android:layout_marginLeft="10dp"
+                        android:text="Schedule (Pick time)"
+                        android:layout_centerVertical="true"
+                        />
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:id="@+id/cbschedule"
+                        />
+                </RelativeLayout>
             </RelativeLayout>
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
@@ -383,15 +572,18 @@
                         android:layout_width="wrap_content"
                         android:text="Pay amount through Paytm on mobile no."
                         android:id="@+id/rbpaytm"
+                        android:visibility="gone"
                         android:layout_height="wrap_content" />
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:text="Pay amount through Tez on mobile no."
+                        android:visibility="gone"
                         android:id="@+id/rbtez"
                         android:layout_height="wrap_content" />
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:text="Pay amount through PhonePe on mobile no."
+                        android:visibility="gone"
                         android:id="@+id/rbphonepe"
                         android:layout_height="wrap_content" />
 
