--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -240,7 +240,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Select Your Zone"
+                    android:text="Select Your Nearest Zone"
                     android:textAllCaps="false"
                     android:textSize="15dp"
                     android:textColor="@android:color/black"
