--- a/app/src/main/res/layout/activity_view_bill.xml
+++ b/app/src/main/res/layout/activity_view_bill.xml
@@ -107,8 +107,9 @@
                 android:id="@+id/cvbill"
                 android:layout_below="@+id/rlrestinfo"
                 android:layout_height="wrap_content">
-                <android.support.constraint.ConstraintLayout
+                <LinearLayout
                     android:layout_width="match_parent"
+                    android:orientation="vertical"
                     android:layout_height="wrap_content"
                     android:animateLayoutChanges="true"
                     android:padding="10dp"
@@ -165,6 +166,79 @@
                         android:id="@+id/recycler_bill"
                         android:layout_height="wrap_content">
                     </android.support.v7.widget.RecyclerView>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:id="@+id/llbillpromo"
+                        android:visibility="gone"
+                        >
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_marginVertical="5dp"
+                            app:layout_constraintTop_toBottomOf="@+id/lldeliverycharge"
+                            android:background="@android:color/darker_gray"
+                            android:layout_height="1dp"
+                            android:orientation="horizontal" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:weightSum="4"
+                            android:id="@+id/llsubtotal"
+                            android:layout_height="wrap_content"
+
+                            app:layout_constraintTop_toBottomOf="@+id/recycler_bill"
+                            >
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="3"
+                                android:text="Subtotal"
+                                android:textColor="@android:color/black"
+                                android:textSize="15dp"
+                                />
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Rs. 40"
+                                android:id="@+id/txtsubtotal"
+                                android:textColor="@android:color/black"
+                                android:textAlignment="center"
+                                />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:weightSum="4"
+                            android:id="@+id/llpromocodebill"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toBottomOf="@+id/recycler_bill"
+                            >
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="3"
+                                android:text="Promo - "
+                                android:textColor="#1e90ff"
+                                android:textSize="15dp"
+                                android:id="@+id/txtbillpromoname"
+                                />
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Rs. 40"
+                                android:id="@+id/txtpromoamount"
+                                android:textColor="#1e90ff"
+                                android:textAlignment="center"
+                                />
+                        </LinearLayout>
+                    </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:weightSum="4"
@@ -229,7 +303,7 @@
                     </LinearLayout>
 
 
-                </android.support.constraint.ConstraintLayout>
+                </LinearLayout>
             </android.support.v7.widget.CardView>
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
