--- a/app/src/main/res/layout/content_ordermeal.xml
+++ b/app/src/main/res/layout/content_ordermeal.xml
@@ -7,7 +7,11 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".OrderMeal"
     tools:showIn="@layout/app_bar_ordermeal">
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:id="@+id/pulltorefreshhome"
 
+        android:layout_height="wrap_content">
     <ScrollView
         android:layout_width="match_parent"
         android:nestedScrollingEnabled="true"
@@ -41,4 +45,5 @@
         />
     </RelativeLayout>
     </ScrollView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
