--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -124,7 +124,7 @@
             android:layout_below="@+id/food_image"
             android:id="@+id/rlname"
             android:background="#99ffffff"
-            android:layout_height="35dp">
+            android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
