--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -44,6 +44,19 @@
             android:title="Give Feedback"
             android:iconTint="@android:color/white"
             />
+        <item
+            android:id="@+id/nav_eventcatering"
+                android:icon="@drawable/ic_event_note_black_24dp"
+            android:title="Event Catering"
+            android:iconTint="@android:color/white"
+            />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_arrow_back_black_24dp"
+            android:title="Logout"
+            android:iconTint="@android:color/white"
+            />
+
 
 
 
