--- a/app/src/main/res/drawable/grad_splash_bg.xml
+++ b/app/src/main/res/drawable/grad_splash_bg.xml
@@ -4,8 +4,8 @@
 <item>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <gradient android:startColor="@android:color/holo_blue_light"
-        android:endColor="#1069e1"
+    <gradient android:startColor="#ffffff"
+        android:endColor="#ffffff"
         android:angle="270"
         android:type="linear">
 
