--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -338,12 +338,17 @@
                     android:focusableInTouchMode="true"
                     android:layout_below="@+id/txtpromocode"
                     >
-                    <ImageView
+                    <TextView
                         android:layout_centerVertical="true"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:src="@drawable/ic_monetization_on_black_24dp"
-                        android:tint="#1e90ff"
+                        android:text="%"
+                        android:textSize="18dp"
+                        android:textStyle="bold"
+                        android:textColor="@android:color/white"
+                        android:gravity="center"
+                        android:background="@drawable/bt_bg"
+                        android:backgroundTint="#1e90ff"
                         android:id="@+id/imgcc"
                         />
                     <EditText
@@ -446,6 +451,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_below="@+id/rl1"
+                    android:id="@+id/rl2"
                     android:layout_height="wrap_content">
                     <TextView
                         android:layout_width="wrap_content"
@@ -463,6 +469,29 @@
                         android:layout_centerVertical="true"
                         android:layout_alignParentRight="true"
                         android:id="@+id/cbschedule"
+                        />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_below="@+id/rl2"
+                    android:visibility="gone"
+                    android:id="@+id/rl3"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="15dp"
+                        android:textColor="@android:color/black"
+                        android:layout_marginLeft="10dp"
+                        android:text="09:00 PM - 10:00 PM"
+                        android:layout_centerVertical="true"
+                        />
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:id="@+id/cbthird"
                         />
                 </RelativeLayout>
             </RelativeLayout>
