--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -65,6 +65,7 @@
                 android:layout_height="wrap_content">
             <ScrollView
                 android:layout_width="match_parent"
+                android:nestedScrollingEnabled="true"
                 android:layout_height="match_parent">
 
                 <RelativeLayout
@@ -87,6 +88,7 @@
                         android:layout_below="@+id/slidermenu"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:nestedScrollingEnabled="false"
                         >
 
                     </android.support.v7.widget.RecyclerView>
