--- a/app/src/main/res/layout/app_bar_ordermeal.xml
+++ b/app/src/main/res/layout/app_bar_ordermeal.xml
@@ -24,9 +24,13 @@
             android:background="@android:color/white"
             app:popupTheme="@style/AppTheme.PopupOverlay" >
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
             <com.mancj.materialsearchbar.MaterialSearchBar
                 android:layout_width="wrap_content"
                 app:mt_roundedSearchBarEnabled="true"
+                android:layout_toLeftOf="@+id/orderstatusnotif"
                 android:foreground="@drawable/bt_bg"
                 app:mt_placeholder="Search Restaurant"
                 android:id="@+id/SearchBar"
@@ -37,7 +41,20 @@
 
             </com.mancj.materialsearchbar.MaterialSearchBar>
 
-
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/orderstatusnotif"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:visibility="gone"
+                android:layout_alignParentRight="true"
+                app:lottie_fileName="ripple.json"
+                android:layout_centerVertical="true"
+                app:lottie_loop="true"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
+                app:lottie_autoPlay="true"
+                />
+            </RelativeLayout>
 
 
         </android.support.v7.widget.Toolbar>
